# bemos-modbus-client

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CMakeLists.txt  Dockerfile  Makefile  README.md  bemos_modbus_client.cpp  bemos_modbus_client.sublime-project  rio_exception.hpp  version.cpp  version.hpp  version_info.hpp
.github/workflows/: ci.yml
example_configurations/: bone.conf  bone_rtu.conf  clipx.conf  ifm_rpm.conf  siemens_fu.conf
include/bemos_modbus_client/: version.hpp  version_info.hpp
src/: bemos_modbus_client.cpp  version.cpp
